hphp/hack/test/ifc/check/legacy_collection.php.exp
=== IFC analysis results for legacy_collection.php
File "legacy_collection.php", line 28, characters 5-26:
Data with policy `VALUE` appears in context `PUBLIC`. (Typing[4379])
  File "legacy_collection.php", line 7, characters 14-23:
  This may be the data source with policy `VALUE`
  File "legacy_collection.php", line 9, characters 14-24:
  This may be the data sink with policy `PUBLIC`
  File "legacy_collection.php", line 27, characters 5-47:
  Another program point contributing to the illegal flow
File "legacy_collection.php", line 21, characters 7-35:
Data with policy `VALUE` appears in context `PUBLIC`. (Typing[4379])
  File "legacy_collection.php", line 7, characters 14-23:
  This may be the data source with policy `VALUE`
  File "legacy_collection.php", line 9, characters 14-24:
  This may be the data sink with policy `PUBLIC`
File "legacy_collection.php", line 14, characters 5-26:
Data with policy `VALUE` appears in context `PUBLIC`. (Typing[4379])
  File "legacy_collection.php", line 7, characters 14-23:
  This may be the data source with policy `VALUE`
  File "legacy_collection.php", line 9, characters 14-24:
  This may be the data sink with policy `PUBLIC`
  File "legacy_collection.php", line 13, characters 5-36:
  Another program point contributing to the illegal flow
